Remove animation titles

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     </div>
     <section class="garantia py-lg bg"> 
       <div class="container"> 
-        <h2 class="title-section text-center pb-md" data-aos="zoom-in" data-aos-duration="2000"> Trasplante capilar con garantía</h2>
+        <h2 class="title-section text-center pb-md">Trasplante capilar con garantía</h2>
         <div class="row">
           <div class="col-md-4">
             <div class="card mt-md" data-aos="flip-left" data-aos-duration="1500"> 
@@ -127,9 +127,9 @@
           </div>
           <div class="col-12 col-md-6 pb-lg"> 
             <div class="content-text flow"> 
-              <h2 class="title-section" data-aos="zoom-in" data-aos-duration="2000">  Somos expertos en  trasplante  capilar y medicina estética            </h2>
-              <p class="paragraph" data-aos="zoom-in" data-aos-duration="2500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-              <p class="paragraph" data-aos="zoom-in" data-aos-duration="3000">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+              <h2 class="title-section" data-aos="fade-up">  Somos expertos en  trasplante  capilar y medicina estética            </h2>
+              <p class="paragraph" data-aos="fade-up">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+              <p class="paragraph" data-aos="fade-up">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
               <button class="btn btn-primary">Más Información</button>
             </div>
           </div>
@@ -137,13 +137,13 @@
         <div class="row conocenos-section"> 
           <div class="col-12 col-md-6 pb-lg">
             <div class="content-text flow"> 
-              <h2 class="title-section" data-aos="zoom-in" data-aos-duration="2000">   La Clínica</h2>
-              <p class="paragraph" data-aos="zoom-in" data-aos-duration="2500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-              <p class="paragraph" data-aos="zoom-in" data-aos-duration="3000">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+              <h2 class="title-section" data-aos="fade-up">   La Clínica</h2>
+              <p class="paragraph" data-aos="fade-up">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+              <p class="paragraph" data-aos="fade-up">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
               <button class="btn btn-primary">Más Información</button>
             </div>
           </div>
-          <div class="col-12 col-md-6" data-aos="fade-up" data-aos-duration="2500">
+          <div class="col-12 col-md-6" data-aos="fade-up">
             <picture class="picture">
               <source class="picture__img" srcset="images/02-clinica@2x.png" media="(min-width: 768px)"/><img class="picture__img" src="images/02-clinica.png" alt="Doctor"/>
             </picture>
@@ -153,7 +153,7 @@
     </section>
     <section class="galeria bg py-lg" id="galeria"> 
       <div class="container">
-        <h1 class="title-section text-center py-md" data-aos="zoom-in" data-aos-duration="2000"> Nuestra Galería</h1>
+        <h1 class="title-section text-center py-md"> Nuestra Galería</h1>
         <ul class="grid pb-md"> 
           <li class="grid__item img1" data-aos="zoom-in" data-aos-duration="1500">
             <picture> 
@@ -191,8 +191,8 @@
     <section class="medicos py-lg" id="medicos"> 
       <div class="container">
         <div class="medicos-title text-center py-md">
-          <h2 class="title-section" data-aos="zoom-in" data-aos-duration="2000"> Nuestros Médicos Cualificados </h2>
-          <p class="paragraph" data-aos="zoom-in" data-aos-duration="2500"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+          <h2 class="title-section"> Nuestros Médicos Cualificados </h2>
+          <p class="paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
         </div>
         <div class="row pb-md"> 
           <div class="col-md-4 pb-lg" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-duration="3500"> 
@@ -335,7 +335,7 @@
             </ul>
           </div>
         </div>
-        <div class="row"> <span class="footer__copy text-center py-md">&copy; All Rights Reserved By <a href="https://wilsonweb.netlify.app/">Wilson Muñoz </a></span></div>
+        <div class="row"> <span class="footer__copy text-center py-md">&copy; All Rights Reserved By <a href="https://wilsonmunoz.com/">Wilson Muñoz </a></span></div>
         <div class="scrollTop">&uarr;</div>
       </div>
     </footer>
